@@ -1,6 +1,13 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  21 Mar 2002; Dan Armak <danarmak@gentoo.org>
+  
+  portage.py: added ECLASSDIR (=$PORTDIR/eclass) to settings exported by python
+  side to bash side.
+  ebuild.sh: remove ECLASSDIR setting to use the one now provided by portage.py.
+  Also, clean inherit() and make it use debug-print().
+
 *portage-1.8.9_pre31 (21 Mar 2002)
 
   21 Mar 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: Added Dan
